# ytoncmd

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakeLists.txt.bak2  main.cpp  readme
.github/workflows/: build-ffmpeg-msvc-static.yml  build.yml  cmake-multi-platform.yml
cmake/toolchains/: mingw-w64-x86_64.cmake
include/: Color.hpp  ImageSource.hpp  MediaSource.hpp  Renderer.hpp  StreamSource.hpp  VideoSource.hpp
scripts/: build-linux.sh  build-windows-mingw.sh  build-windows.ps1
src/: ImageSource.cpp  MediaSource.cpp  Renderer.cpp  StreamSource.cpp  VideoSource.bak  VideoSource.cpp  printHelp.cpp
